--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>My Resume Site</title>
-</head>
-<body>
+<!DOCTYPE html>
+<html lang="en"> //language
+    <head>
+        <title>This is the title</title>
+    </head>
 
-</body>
-</html>
+    <body>
+        <h1> this is my webpage! </h1>
+        <p>this is a paragraph</p>
+    </body>
+
+</html> //close html
+
