w3 check updated codes

--- a/project1.html
+++ b/project1.html
@@ -37,7 +37,7 @@
 <a class="skip-link" href="#main">Skip to content</a>
 
 <!-- Page header with title and navigation -->
-<header class="wrapper" role="banner">
+<header class="wrapper">
   <h1>Project 1: Interactive Vending Machine Program</h1>
   <nav aria-label="Main navigation">
     <a href="index.html">Home</a>
@@ -89,7 +89,7 @@
 </main>
 
 <!-- Footer with copyright -->
-<footer class="wrapper" role="contentinfo">
+<footer class="wrapper">
   <p>© <span id="year"></span> Hiep Nguyen • <a href="mailto:hi799860@ucf.edu">hi799860@ucf.edu</a></p>
 </footer>
 
