--- a/project2.html
+++ b/project2.html
@@ -37,7 +37,7 @@
 <a class="skip-link" href="#main">Skip to content</a>
 
 <!-- Page header with title and navigation -->
-<header class="wrapper" role="banner">
+<header class="wrapper">
   <h1>Project 2: Shoe Collection Management Program</h1>
   <nav aria-label="Main navigation">
     <a href="index.html">Home</a>
@@ -82,22 +82,13 @@
           <li>Practicing object-oriented programming ideas (classes and objects)</li>
           <li>Strengthening problem-solving and logical thinking through coding</li>
         </ul>
-
-        <!-- Links section (optional, can be added later) -->
-        <!--
-        <h2>Links</h2>
-        <p>
-          <a href="#" target="_blank" rel="noopener">GitHub Repo</a> |
-          <a href="#" target="_blank" rel="noopener">Demo / PDF</a>
-        </p>
-        -->
       </section>
     </section>
   </article>
 </main>
 
 <!-- Footer with copyright -->
-<footer class="wrapper" role="contentinfo">
+<footer class="wrapper">
   <p>© <span id="year"></span> Hiep Nguyen • <a href="mailto:hi799860@ucf.edu">hi799860@ucf.edu</a></p>
 </footer>
 
