navigation for resume page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -18,6 +17,15 @@
       <a href="mailto:hi799860@ucf.edu">hi799860@ucf.edu</a> ·
       <a href="https://www.linkedin.com/in/hiep-nguyen-30082000/">LinkedIn</a>
     </address>
+
+    <!-- NEW: Site navigation to move between pages -->
+    <nav aria-label="Main navigation">
+      <ul>
+        <li><a href="index.html" aria-current="page">Resume</a></li>
+        <li><a href="project1.html">Project 1</a></li>
+        <li><a href="project2.html">Project 2</a></li>
+      </ul>
+    </nav>
 
     <!-- Navigation menu for different sections of the page -->
     <nav aria-label="Page sections">
@@ -121,5 +129,6 @@
   </footer>
 </body>
 </html>
+
 
 
